2004-02-08  Joseph S. Myers  <jsm@polyomino.org.uk>

	* rain/rain.c, worms/worms.c: Hide the cursor with curs_set(0).
	From OpenBSD.

	* tests/factor.8675309, tests/factor.6172538568: New tests (from
	NetBSD src/regress).
	* tests/factor.test: Update.

	* boggle/README.linux, dm/README.linux, fortune/README.linux,
	hunt/README.linux, trek/README.linux: Remove.
	* README: Move information from those files to here.
	* INSTALL: Update.
	* COPYING: Update.

	* factor/Makefile.bsd, factor/factor.6, factor/factor.c,
	primes/Makefile.bsd, primes/primes.6: Update from NetBSD CVS.

	* TODO: Update.

	* substscr: Explicitly set execute permissions from those of
	source file.

	* primes/primes.6: Separate manpage from that of factor.
	* primes/Makefrag: Update.
	* factor/factor.6: Change to be a manpage for factor only.

	* factor/factor.c: Only use Pollard p-1 if remaining factor isn't
	prime.  Correct comment.  Increase base if p-1 algorithm reaches
	1.
	* tests/factor.2147483647111311, tests/factor.99999999999991: New
	tests.
	* tests/factor.test: Update.
	Bugs reported by David A Bagley <bagleyd@tux.org>.

	* countmail/countmail.6, phantasia/fight.c, phantasia/io.c,
	sail/extern.h, sail/misc.c, snake/snake/snake.c: Update from
	NetBSD CVS.

2004-01-27  Joseph S. Myers  <jsm@polyomino.org.uk>

	* dab/.cvsignore: New file.

	* Makeconfig.in: Add STRLCPY_DEFS and GETPROGNAME_DEFS.
	* arithmetic/Makefrag, fortune/fortune/Makefrag, rogue/Makefrag:
	Use them.

	* dm/utmpentry.c, dm/utmpentry.h: New from NetBSD CVS of
	usr.bin/who.
	* COPYING: Update.
	* dm/dm.c: Follow NetBSD in use of this utmp handling.
	* dm/Makefrag: Update.
	* exec.objs: Update.

	* lib/getprogname.c: New file.
	* include/stdlib.h: Update.
	* configure: Check for getprogname.
	* arithmetic/arithmetic.c, fortune/fortune/fortune.c: Follow
	NetBSD in use of getprogname().
	* exec.objs: Update.

	* adventure/extern.h, adventure/main.c, arithmetic/arithmetic.c,