@@ -1,4 +1,4 @@
-/*	$NetBSD: main.c,v 1.19 2004/01/01 15:59:58 jsm Exp $	*/
+/*	$NetBSD: main.c,v 1.20 2004/02/08 22:23:50 jsm Exp $	*/
 
 /*
  * Copyright (c) 1980, 1993
@@ -39,7 +39,7 @@ __COPYRIGHT("@(#) Copyright (c) 1980, 1993\n\
 #if 0
 static char sccsid[] = "@(#)main.c	8.1 (Berkeley) 5/31/93";
 #else
-__RCSID("$NetBSD: main.c,v 1.19 2004/01/01 15:59:58 jsm Exp $");
+__RCSID("$NetBSD: main.c,v 1.20 2004/02/08 22:23:50 jsm Exp $");
 #endif
 #endif				/* not lint */
 
