@@ -1,4 +1,4 @@
-/*	$NetBSD: faketalk.c,v 1.9 2004/01/27 20:30:29 jsm Exp $	*/
+/*	$NetBSD: faketalk.c,v 1.10 2004/02/08 22:23:50 jsm Exp $	*/
 /*
  * Copyright (c) 1983-2003, Regents of the University of California.
  * All rights reserved.
@@ -32,7 +32,7 @@
 
 #include <sys/cdefs.h>
 #ifndef lint
-__RCSID("$NetBSD: faketalk.c,v 1.9 2004/01/27 20:30:29 jsm Exp $");
+__RCSID("$NetBSD: faketalk.c,v 1.10 2004/02/08 22:23:50 jsm Exp $");
 #endif /* not lint */
 
 #include "bsd.h"
