@@ -1,4 +1,4 @@
-/*	$NetBSD: hunt.h,v 1.10 2004/01/27 20:30:29 jsm Exp $	*/
+/*	$NetBSD: hunt.h,v 1.11 2004/02/08 22:23:50 jsm Exp $	*/
 
 /*
  * Copyright (c) 1983-2003, Regents of the University of California.
